# WasmFileSystemRemover

./: Cargo.toml  README.md  out.wasm  quickjs-ng-release-sync.wasm
src/: arguments.rs  main.rs
